--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,12 @@ dependencies:
   firebase_auth: ^4.1.1
   intl: ^0.17.0
   fl_chart: ^0.55.2
+  localstore: ^1.3.5
+  floatingpanel: ^1.1.3
+  pdf: ^3.10.1
+  path_provider: ^2.0.15
+  open_file: ^3.3.1
+  open_file_plus: ^3.4.1
 
 dev_dependencies:
   flutter_test:
