--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   path_provider: ^2.0.15
   open_file: ^3.3.1
   open_file_plus: ^3.4.1
+  syncfusion_flutter_charts: ^21.2.4
 
 dev_dependencies:
   flutter_test:
