--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,10 +42,10 @@ dependencies:
   group_button: ^5.2.2
   cloud_firestore: ^4.0.4
   firebase_auth: ^4.1.1
-  intl: ^0.17.0
-  fl_chart: ^0.55.2
+  intl: 0.18.1
+  fl_chart: ^0.62.0
   localstore: ^1.3.5
-  floatingpanel: ^1.1.3
+  #floatingpanel: ^1.1.3
   pdf: ^3.10.1
   path_provider: ^2.0.15
   open_file: ^3.3.1
