--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   open_file: ^3.3.1
   open_file_plus: ^3.4.1
   syncfusion_flutter_charts: ^21.2.4
+  to_csv: ^1.1.2
 
 dev_dependencies:
   flutter_test:
