--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,9 @@ dependencies:
   syncfusion_flutter_charts: ^21.2.4
   to_csv: ^1.1.2
 
+dependency_overrides:
+  intl: any
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
