--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   open_file_plus: ^3.4.1
   syncfusion_flutter_charts: ^21.2.4
   to_csv: ^1.1.2
+  percent_indicator: ^4.2.3
 
 dependency_overrides:
   intl: any
